# carreporter

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
api/src/handlers/: mod.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: app.rs  main.rs
frontend/src/components/: location.rs  mod.rs
frontend/src/hooks/: use_user_context.rs
frontend/src/pages/: footer.rs  header.rs  home.rs  mod.rs  report.rs
frontend/src/services/: admin.rs  requests.rs
frontend/src/types/: mod.rs
